# GreedySnake

./: .gitignore  CMakeLists.txt  GreedySnake.sublime-project  Makefile  README.md  SDL2.sublime-workspace  common.mk
include/: SDLColor.h  SDLError.h  SDLPoint.h  SDLRect.h  SDLRenderer.h  SDLTexture.h  SDLWindow.h
src/: GameWindow.h  SDLColor.cpp  SDLPoint.cpp  SDLRenderer.cpp  SDLTexture.cpp  SDLWindow.cpp  main.cpp
src/frame/: SDLColor.cpp  SDLPoint.cpp  SDLRect.cpp  SDLRenderer.cpp  SDLTexture.cpp  SDLWindow.cpp
